--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,3 +18,11 @@ tasks:
     desc: Start rails console on current rails process
     cmds:
       - bin/rails console
+  lint:
+    desc: Run rubocop for linting
+    cmds:
+      - rubocop
+  lint::fix:
+    desc: Run rubocop for linting with autocorrection
+    cmds:
+      - rubocop -A
