--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,14 +1,3 @@
-# examples:
-#   periodic_cleanup:
-#     class: CleanSoftDeletedRecordsJob
-#     queue: background
-#     args: [ 1000, { batch_size: 500 } ]
-#     schedule: every hour
-#   periodic_cleanup_with_command:
-#     command: "SoftDeletedRecord.due.delete_all"
-#     priority: 2
-#     schedule: at 5am every day
-
 development:
   check_sites:
     class: ScheduleSiteCheckJob
@@ -18,3 +7,6 @@ production:
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
     schedule: every hour at minute 12
+  cleanup_old_results:
+    class: CleanupCheckResultsJob
+    schedule: every day at 3am
